# openstlb

./: .cproject  .project  README
doc/: jednotky.def  mapa.txt
src/: CMakeLists.txt  EngineMgr.cpp  EngineMgr.h  main.cpp
src/BattleMapSystem/: BattleMap.cpp  BattleMap.h  BattleMapGameplay.cpp  BattleMapGameplay.h  BattleMapStructures.cpp  BattleMapStructures.h  UnitType.cpp  UnitType.h  Units.cpp  Units.h
src/GfxSystem/: ISprite.h  Palette.cpp  Palette.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpritePanimation.cpp  SpritePanimation.h
src/ResourceSystem/: Resource.cpp  Resource.h  ResourceMgr.cpp  ResourceMgr.h  ResourceTypes.h
src/ResourceSystem/Archives/: ArchiveMgr.cpp  ArchiveMgr.h  FsArchive.cpp  FsArchive.h  FsuArchive.cpp  FsuArchive.h  IArchive.h
src/Setup/: common.h  forwards.h
src/Utils/: DataContainer.cpp  DataContainer.h  IReader.h  Lzw.cpp  LzwCodec.cpp  LzwCodec.h  MemoryReader.cpp  MemoryReader.h  StreamIO.h  StringConversions.h
